Fix blog summary image heights to align titles.

--- a/css/content-generator/default-summary-layout.css
+++ b/css/content-generator/default-summary-layout.css
@@ -1,5 +1,9 @@
 @import url("/css/content-generator/default-cover-layout.css");
 
+aside.summary div.summary-image {
+  height: 200px;
+}
+
 aside.summary div.summary-content p.summary-content {
   text-align: left;
   padding-left: 0.5em;
